logs/mine.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/YORM-1.5.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/crayons-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/mine'...
Listing './lib/python3.5/site-packages/mine/models'...
Compiling './lib/python3.5/site-packages/mine/models/data.py'...
***   File "./lib/python3.5/site-packages/mine/models/data.py", line 65
    f"{application} is queued for {app_status.next}"))
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mine/services.py'...
***   File "./lib/python3.5/site-packages/mine/services.py", line 91
    print(f"\nRun again with '--force' to delete these {count} conflict(s)")
                                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mine/tests'...
Listing './lib/python3.5/site-packages/mine-1.5.dist-info'...
Listing './lib/python3.5/site-packages/parse-1.8.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil-2.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/yorm'...
Listing './lib/python3.5/site-packages/yorm/bases'...
Listing './lib/python3.5/site-packages/yorm/tests'...
Listing './lib/python3.5/site-packages/yorm/types'...
Listing './share'...
Listing './share/python-wheels'...
